WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185326
[Win] LoggingWin is missing includes
https://bugs.webkit.org/show_bug.cgi?id=185326
Summary
[Win] LoggingWin is missing includes
Don Olmstead
Reported
2018-05-04 14:53:41 PDT
LoggingWin.cpp should be including <windows.h>.
Attachments
Patch
(964 bytes, patch)
2018-05-04 14:56 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-05-04 14:56:34 PDT
Created
attachment 339598
[details]
Patch
Per Arne Vollan
Comment 2
2018-05-07 10:36:54 PDT
Comment on
attachment 339598
[details]
Patch R=me.
WebKit Commit Bot
Comment 3
2018-05-07 11:07:34 PDT
Comment on
attachment 339598
[details]
Patch Clearing flags on attachment: 339598 Committed
r231446
: <
https://trac.webkit.org/changeset/231446
>
WebKit Commit Bot
Comment 4
2018-05-07 11:07:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-05-07 11:08:20 PDT
<
rdar://problem/40028988
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug