[Win] LoggingWin is missing includes https://bugs.webkit.org/show_bug.cgi?id=185326

Reviewed by Per Arne Vollan.

* Platform/win/LoggingWin.cpp:


Canonical link: https://commits.webkit.org/200847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231446 268f45cc-cd09-0410-ab3c-d52691b4dbfc